Fix butter js issues with positioned absolute elements overflowing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -175,5 +175,6 @@ ul {
 }
 
 #butter {
-  transform: translate3d(0px, 0px, 0px);
+  position: relative;
+  overflow-x: hidden;
 }
